--- a/AlfredoBarrera.html
+++ b/AlfredoBarrera.html
@@ -77,23 +77,9 @@
 								<div class="3u 12u(mobile)">
 
 									<!-- Right Sidebar -->
-								  <section>
-											<header>
-												<h2>Naturalistas siglo XX</h2>
-                                                <ul class="link-list">
-                                            <li><a href="AlfredoBarrera.html"><br>
-                                            Alfredo Barrera Marín</a></li>
-                                            <li><a href="AmeliaSamano.html">Amelia Sámano Bishop</a></li>
-                                            <li><a href="AnaHoffman.html">Ana Hoffmann Mendizábal</a></li>
-                                            <li><a href="BernardoVilla.html">Bernardo Villa Ramírez</a></li>
-                                            <li><a href="EfrainHdezX.html">Efraim Hernández Xolocotzi</a></li>
-                                            <li><a href="EnriqueBeltran.html">Enrique Beltrán Castillo</a></li>
-                                              </ul>
-											</header>
-										</section>
-                                       
-                                        <section class="link-list">
-											<header>
+
+									<section class="link-list">
+										<header>
 												<h2>Aportación</h2>
 										  </header>
                                            <ul class="link-list">
@@ -101,6 +87,20 @@
                                             <li> Portada del <em><a href="http://www.scielo.org.mx/scielo.php?script=sci_arttext&pid=S0065-17372015000300010" target="_blank">Acta Zoológica Mexicana (nueva serie)</a></em> en su primer número en 1984</li>
                                      </ul>
                                   </section>
+                                  <section>
+											<header>
+												<h2>Naturalistas siglo XX</h2>
+                                                <ul class="link-list">
+                                            <li><a href="AlfredoBarrera.html">Alfredo Barrera Marín</a></li>
+                                            <li><a href="AmeliaSamano.html">Amelia Sámano Bishop</a></li>
+                                            <li><a href="AnaHoffman.html">Ana Hoffmann Mendizábal</a></li>
+                                            <li><a href="BernardoVilla.html">Bernardo Villa Ramírez</a></li>
+                                            <li><a href="EfrainHdezX.html">Efraim Hernández Xolocotzi</a></li>
+                                            <li><a href="EnriqueBeltran.html">Enrique Beltrán Castillo</a></li>
+                                            <li><img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <a href="index.html">Línea de tiempo</a></li>
+                                              </ul>
+											</header>
+								  </section>
 							  </div>
 							</div>
 						</div>
