--- a/AmeliaSamano.html
+++ b/AmeliaSamano.html
@@ -77,7 +77,16 @@
 								<div class="3u 12u(mobile)">
 
 									<!-- Right Sidebar -->
-										<section>
+                                        <section>
+											<header>
+												<h2>Aportación</h2>
+										  </header>
+											<p><img src="images/pagInternas/ASamanoimg1.jpg" width="230" height="319" alt=""/><br>
+											  Artículo:
+											  <a href="http://www.redalyc.org/articulo.oa?id=441942933002" target="_blank">Microalgas del Área Natural Protegida Ejidos de Xochimilco y San Gregorio Atlapulco</a>, México<br>
+											  Revista: CienciaUAT 2015 9(2)											  <br>
+                                  </p></section>
+                                  <section>
 											<header>
 												<h2>Naturalistas siglo XX</h2>
                                                 <ul class="link-list">
@@ -87,19 +96,10 @@
                                             <li><a href="BernardoVilla.html">Bernardo Villa Ramírez</a></li>
                                             <li><a href="EfrainHdezX.html">Efraim Hernández Xolocotzi</a></li>
                                             <li><a href="EnriqueBeltran.html">Enrique Beltrán Castillo</a></li>
+                                            <li><img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <a href="index.html">Línea de tiempo</a></li>
                                               </ul>
 											</header>
 										</section>
-										
-                                        <section>
-											<header>
-												<h2>Aportación</h2>
-										  </header>
-											<p><img src="images/pagInternas/ASamanoimg1" width="230" height="319" alt=""/><br>
-											  Artículo:
-											  <a href="http://www.redalyc.org/articulo.oa?id=441942933002" target="_blank">Microalgas del Área Natural Protegida Ejidos de Xochimilco y San Gregorio Atlapulco</a>, México<br>
-											  Revista: CienciaUAT 2015 9(2)											  <br>
-                                  </p></section>
 							  </div>
 							</div>
 						</div>
