--- a/AnaHoffman.html
+++ b/AnaHoffman.html
@@ -77,7 +77,14 @@
 								<div class="3u 12u(mobile)">
 
 									<!-- Right Sidebar -->
-										<section>
+                                        <section>
+											<header>
+												<h2>Aportación</h2>
+										  </header>
+											<p><img src="images/pagInternas/AHoffmanimg1.jpg" width="230" height="324" alt=""/><br>
+											  <a href="https://books.google.com.mx/books?id=oE9nINz5ENcC&pg=PA13&lpg=PA13&dq=laborato-+rios+de+acarolog%C3%ADa,+uno+en+la+Escuela+Nacional+de+Ciencias+Biológicas+(ENCB)&source=bl&ots=SvmtRzlqQV&sig=amHsETLBR9Cq2jZ6cAxFmsUkzAs&hl=es&sa=X&ved=0ahUKEwia_PXz84LPAhXQdSYKHTCkCDQQ6AEIPjAG#v=onepage&q&f=false" target="_blank">Las colecciones de artrópodos de A. Hoffmann.</a> Laboratorio de Acarología, Fac. de Ciencias, UNAM</p>
+                                              </section>
+                                  <section>
 											<header>
 												<h2>Naturalistas siglo XX</h2>
                                                 <ul class="link-list">
@@ -87,17 +94,11 @@
                                             <li><a href="BernardoVilla.html">Bernardo Villa Ramírez</a></li>
                                             <li><a href="EfrainHdezX.html">Efraim Hernández Xolocotzi</a></li>
                                             <li><a href="EnriqueBeltran.html">Enrique Beltrán Castillo</a></li>
+                                            <li><img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <a href="index.html">Línea de tiempo</a></li>
                                               </ul>
 											</header>
 										</section>
 										
-                                        <section>
-											<header>
-												<h2>Aportación</h2>
-										  </header>
-											<p><img src="images/pagInternas/AHoffmanimg1" width="230" height="324" alt=""/><br>
-											  <a href="https://books.google.com.mx/books?id=oE9nINz5ENcC&pg=PA13&lpg=PA13&dq=laborato-+rios+de+acarolog%C3%ADa,+uno+en+la+Escuela+Nacional+de+Ciencias+Biológicas+(ENCB)&source=bl&ots=SvmtRzlqQV&sig=amHsETLBR9Cq2jZ6cAxFmsUkzAs&hl=es&sa=X&ved=0ahUKEwia_PXz84LPAhXQdSYKHTCkCDQQ6AEIPjAG#v=onepage&q&f=false" target="_blank">Las colecciones de artrópodos de A. Hoffmann.</a> Laboratorio de Acarología, Fac. de Ciencias, UNAM<br>
-                                  </p></section>
 							  </div>
 							</div>
 						</div>
