--- a/EfrainHdezX.html
+++ b/EfrainHdezX.html
@@ -85,7 +85,20 @@
 								<div class="3u 12u(mobile)">
 
 									<!-- Right Sidebar -->
-								  <section>
+
+									<section>
+									  <header>
+												<h2>Aportación</h2>
+										  </header>
+										  <p><img src="images/pagInternas/EfrainHdezXimg2.jpg" width="230" height="298" alt=""/><br>
+										    Fuente: Vida y obra de Efraín Hernández Xolocotzi Guzmán, a 100 años de su nacimiento.
+										  Universidad Autónoma de Chapingo<br>
+		      </p>
+											<p><img src="images/pagInternas/EfrainHdezXimg1.jpg" width="230" height="347" alt=""/><br>
+											  Efraín Hernández X.<a href="http://bdi.conabio.gob.mx/fotoweb/Grid.fwx?archiveId=5064&columns=4&rows=8&search=Efrain Hernández Xolocotzi"> Acervo fotográfico</a>. Banco de imágenes CONABIO<br>
+                                          </p>
+                                  </section>
+                                  <section>
 											<header>
 												<h2>Naturalistas siglo XX</h2>
                                                 <ul class="link-list">
@@ -93,24 +106,12 @@
                                             <li><a href="AmeliaSamano.html">Amelia Sámano Bishop</a></li>
                                             <li><a href="AnaHoffman.html">Ana Hoffmann Mendizábal</a></li>
                                             <li><a href="BernardoVilla.html">Bernardo Villa Ramírez</a></li>
-                                            <li>                                              <a href="EfrainHdezX.html">Efraim Hernández Xolocotzi</a></li>
+                                            <li><a href="EfrainHdezX.html">Efraim Hernández Xolocotzi</a></li>
                                             <li><a href="EnriqueBeltran.html">Enrique Beltrán Castillo</a></li>
+                                            <li><img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <a href="index.html">Línea de tiempo</a></li>
                                               </ul>
 											</header>
-										</section>
-										
-                                        <section>
-										  <header>
-												<h2>Aportación</h2>
-										  </header>
-										  <p><img src="images/pagInternas/EfrainHdezXimg2" width="230" height="298" alt=""/><br>
-										    Fuente: Vida y obra de Efraín Hernández Xolocotzi Guzmán, a 100 años de su nacimiento.
-										  Universidad Autónoma de Chapingo<br>
-		      </p>
-											<p><img src="images/pagInternas/EfrainHdezXimg1" width="230" height="347" alt=""/><br>
-											  Efraín Hernández X.<a href="http://bdi.conabio.gob.mx/fotoweb/Grid.fwx?archiveId=5064&columns=4&rows=8&search=Efrain Hernández Xolocotzi"> Acervo fotográfico</a>. Banco de imágenes CONABIO<br>
-                                          </p>
-                                  </section>
+								  </section>
 							  </div>
 							</div>
 						</div>
