--- a/EiziMatuda.html
+++ b/EiziMatuda.html
@@ -72,40 +72,31 @@
                                             <p>A partir de 1950 se integró como investigador al Instituto de Biología de la Universidad Nacional Autónoma de México (UNAM), y al Instituto de Investigaciones Forestales de la Secretaría de Agricultura y Ganadería.</p>
                                             <p>Colaboró en la Comisión Botánica Exploradora del gobierno del Estado de México, de la cual derivaron numerosos trabajos sobre la flora del estado entre las que destacan &ldquo;Las plantas mexicanas del género <em>Yucca</em>&rdquo;, en coautoría &ldquo;Las leguminosas del Estado de México&rdquo; y &ldquo;Las orquídeas del Estado de México&rdquo;.</p>
                                             <p>Describió decenas de nuevas especies de plantas. En 1932 fundó el Herbario Matuda en  la Universidad de Ciencias y Artes de Chiapas. Gran parte del material de sus colectas se encuentra bajo resguardo del Herbario Nacional (MEXU) del Instituto de Biología de la UNAM.</p>
-                                            <p><strong><em>Para saber más…</em></strong></p>
-                                            <p>El <strong>Herbario Nacional</strong> (MEXU) es la colección más completa y representativa de las plantas mexicanas a nivel mundial, aunque también cuenta con colecciones de hongos, líquenes, frutos y semillas y maderas del país. Sus principales tareas son catalogar y clasificar los distintos ejemplares que aloja, así como realizar investigaciones en varias áreas de la diversidad vegetal, como en la conservación, evolución y la etnobotánica. </p>
+                                            <p class="bordered-feature-image"><strong><em>Para saber más…<br>
+                                              <br>
+                                            </em></strong>El <strong>Herbario Nacional</strong> (MEXU) es la colección más completa y representativa de las plantas mexicanas a nivel mundial, aunque también cuenta con colecciones de hongos, líquenes, frutos y semillas y maderas del país. Sus principales tareas son catalogar y clasificar los distintos ejemplares que aloja, así como realizar investigaciones en varias áreas de la diversidad vegetal, como en la conservación, evolución y la etnobotánica. </p>
                                         </section>
 
 								</div>
 								<div class="3u 12u(mobile)">
 
 									<!-- Right Sidebar -->
-										<section>
-											<header>
-												<h2>Naturalistas siglo XIX</h2>
-                                                <ul class="link-list">
-                                            <li><a href="AlfonsoHerrera.html">Alfonso Herrera Fernández</a></li>
-                                            <li><a href="AlfonsoLHerrera.html">Alfonso L. Herrera López</a></li>
-                                            <li><a href="AlfredoDuges.html">Alfredo Dugès</a></li>
-                                            <li><a href="candidoBolivar.html">Cándido Bolívar y Pieltain</a></li>
-                                            <li><a href="CarlosCHoffmann.html">Carlos Cristian Hoffmann</a></li>
-                                            <li><a href="CasianoConzatti.html">Casiano Conzatti</a></li>
-                                            <li>
-                                              <a href="EitziMatuda.html">Eizi Matuda </a></li>
-                                            <li><a href="EnriqueRioja.html">Enrique Rioja Lo-Bianco</a></li>
-                                              </ul>
-											</header>
-                                            <p>&nbsp;</p>
-										</section>
-										
-                                        <section>
-											<header>
+
+									<section>
+										<header>
 												<h2>Aportación</h2>
 										  </header>
 											<p><img src="images/pagInternas/CosmoVEizimg1.jpg" width="230" height="307" alt=""/><br>
 											  Jardín Botánico, Edo. de México<br>
 											  Fotografía: Flickr Lucy Nieto </p>
                                   </section>
+                                  <section>
+											<header>
+												<ul class="link-list">
+												  <li><img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <a href="index.html">Curiosos y comprometidos</a></li>
+											  </ul>
+											</header>
+								  </section>
 							  </div>
 							</div>
 						</div>
@@ -115,7 +106,53 @@
 			<!-- Footer -->
 				<div id="footer-wrapper">
 					<footer id="footer" class="container">
-						
+						 <section>
+										<h2>Naturalistas del siglo XIX</h2>
+										<div>
+											<div class="row">
+												<div class="3u 12u(mobile)">
+													<ul class="link-list last-child">
+														<li><a href="AntonioCastillo.html">Antonio del Castillo</a></li>
+                                                        <li><a href="AlfredoDuges.html">Alfredo Dugès</a></li>
+                                                        <li><a href="EugenioDuges.html">Eugenio Dugés</a></li>
+                                                        <li><a href="AlfonsoHerrera.html">Alfonso Herrera Fernández</a></li>
+                                                        <li><a href="JoseMVelasco.html">José María Velasco</a></li>
+                                                        <li></li>
+													</ul>
+												</div>
+												<div class="3u 12u(mobile)">
+													<ul class="link-list last-child">
+														<li><a href="ManuelMVillada.html">Manuel María Villada</a></li>
+                                                        <li><a href="MarianoBarcena.html">Mariano Bárcena</a></li>
+                                                        <li><a href="CarlLumholtz.html">Carl Lumholtz</a></li>
+                                                        <li><a href="NicolasLeon.html">Nicolás León Calderón</a></li>
+                                                        <li><a href="MiguelAQuevedo.html">Miguel Ángel de Quevedo</a></li>
+                                                        <li></li>
+                                                     </ul>
+												</div>
+                                                 <div class="3u 12u(mobile)">
+													<ul class="link-list last-child">
+														<li><a href="CasianoConzatti.html">Casiano Conzatti</a></li>
+                                                        <li><a href="AlfonsoLHerrera.html">Alfonso L. Herrera López</a></li>
+                                                        <li><a href="AlfredoDuges.html">Alfredo Dugès</a></li>
+                                                        <li><a href="CarlosCHoffmann.html">Carlos Cristian Hoffmann</a></li>
+                                                        <li><a href="GeorgeBoole.html">George Boole Hinton</a></li>
+                                                        <li></li>
+                                                   </ul>
+                                                 </div>
+                                                 <div class="3u 12u(mobile)">
+													<ul class="link-list last-child">
+														<li><a href="IsaacOchoterena.html">Isaac Ochotorena Mendieta</a></li>
+                                                        <li><a href="MaximinoM.html">Maximino Martínez</a></li>
+                                                        <li><a href="EiziMatuda.html">Eizi Matuda</a></li>
+                                                        <li><a href="EnriqueRioja.html">Enrique Rioja Lo-Bianco</a></li>
+                                                        <li><a href="candidoBolivar.html">Cándido Bolívar y Pieltain</a></li>
+                                                        <li></li>
+													</ul>
+												</div>
+											</div>
+										</div>
+									</section> <br>
 								<!-- Links -->
 									<section>
 										<h2>Línea del tiempo</h2><br>
