--- a/EnriqueBeltran.html
+++ b/EnriqueBeltran.html
@@ -78,27 +78,29 @@ Actualmente cerca del 12 % del territorio mexicano se encuentra bajo alguna moda
 								<div class="3u 12u(mobile)">
 
 									<!-- Right Sidebar -->
-										<section>
+
+									<section>
+										<header>
+												<h2>Aportación</h2>
+										  </header>
+											<p><img src="images/pagInternas/EBeltranCimg1.jpg" width="230" height="360" alt=""/><br>
+											  La protección de la Naturaleza. Enrique Beltrán<br>
+                                  </p>
+                                  </section>
+                                  <section>
 											<header>
 												<h2>Naturalistas siglo XX</h2>
                                                 <ul class="link-list">
-                                            <li><a href="AlfredoBarrera.html">Alfredo Barrera Marín</a><a href="AlfonsoHerrera.html"></a></li>
+                                            <li><a href="AlfredoBarrera.html">Alfredo Barrera Marín</a></li>
                                             <li><a href="AmeliaSamano.html">Amelia Sámano Bishop</a></li>
                                             <li><a href="AnaHoffman.html">Ana Hoffmann Mendizábal</a></li>
                                             <li><a href="BernardoVilla.html">Bernardo Villa Ramírez</a></li>
                                             <li><a href="EfrainHdezX.html">Efraim Hernández Xolocotzi</a></li>
                                             <li><a href="EnriqueBeltran.html">Enrique Beltrán Castillo</a></li>
+                                            <li><img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <a href="index.html">Línea de tiempo</a></li>
                                               </ul>
 											</header>
-										</section>
-										
-                                        <section>
-											<header>
-												<h2>Aportación</h2>
-										  </header>
-											<p><img src="images/pagInternas/EBeltranCimg1" width="230" height="360" alt=""/><br>
-											  La protección de la Naturaleza. Enrique Beltrán<br>
-                                  </p></section>
+								  </section>
 							  </div>
 							</div>
 						</div>
