--- a/JoseAlzate.html
+++ b/JoseAlzate.html
@@ -81,8 +81,17 @@
 								</div>
 								<div class="3u 12u(mobile)">
 
-									<!-- Right Sidebar -->
-								  <section>
+									<!-- Right Sidebar -->	
+                               	 <section>
+									<header>
+										<h2>Aportación</h2>
+								    </header>
+									<p><img src="images/pagInternas/JoseZarateimg1.jpg" width="230" height="347" alt=""/><br>
+							        <a href="https://archive.org/details/novorumvegetabi00lexagoog" target="_blank"></a>Número uno del periódico <em>Diario Literario de México</em> / CONACULTA</p>
+									<p><img src="images/pagInternas/JoseZarateimg2.jpg" width="230" height="323" alt=""/><br>
+								    Asuntos varios sobre ciencias, y artes.  Alzate y Ramirez, José Antonio - 1772									</p>
+                                  </section>
+                                  <section>
 									<h2>Naturalistas Siglo XVIII<a href="Nezahualcoyotl.html"><br>
 									</a></h2>
 									<ul class="link-list">
@@ -97,15 +106,7 @@
                                           <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <a href="index.html">Línea de tiempo</a></li>
                                     </ul>
 									</section>
-								  <section>
-									<header>
-												<h2>Aportación</h2>
-								    </header>
-									<p><img src="images/pagInternas/JoseZarateimg1.jpg" width="230" height="347" alt=""/><br>
-							        <a href="https://archive.org/details/novorumvegetabi00lexagoog" target="_blank"></a>Número uno del periódico <em>Diario Literario de México</em> / CONACULTA</p>
-									<p><img src="images/pagInternas/JoseZarateimg2.jpg" width="230" height="323" alt=""/><br>
-								    Asuntos varios sobre ciencias, y artes.  Alzate y Ramirez, Jose Antonio - 1772									</p>
-                                  </section>
+
 							  </div>
 							</div>
 						</div>
