--- a/Nezahualcoyotl.html
+++ b/Nezahualcoyotl.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Nezahualcóyotl</title>
+		<title>Acolmiztli Nezahualcóyotl</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -87,24 +87,6 @@
 								<div class="3u 12u(mobile)">
 
 									<!-- Right Sidebar -->
-										<section>
-									<h2>Naturalistas Siglo XV<a href="Nezahualcoyotl.html"><br>
-									</a></h2>
-									<ul class="link-list">
-                                        <li><a href="Nezahualcoyotl.html"><br>
-                                        Acolmiztli Nezahualcóyotl</a></li>
-                                        <li><a href="Moctezuma.html">Moctezuma II, Xocoyotzin</a> </li>
-                                        <li><br>
-                                          <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <a href="index.html">Línea de tiempo</a></li>
-                                    </ul>
-								  </section>
-										<section>
-											<header>
-												<h2>Área geográfica</h2>
-										  </header>
-											<p><img src="images/pagInternas/imgMapNezahual.jpg" width="230" height="296" alt=""/><br>
-Texcoco, Ciudad de México</p>
-								  </section>
                                   <section>
 											<header>
 												<h2>Aportación</h2>
@@ -113,6 +95,25 @@ Texcoco, Ciudad de México</p>
 											  Baños de Nezahualcóyotl. José María Velasco (1878)<br>
 									</p>
                                   </section>
+                                  <section>
+											<header>
+												<h2>Área geográfica</h2>
+										  </header>
+											<p><img src="images/pagInternas/imgMapNezahual.jpg" width="230" height="296" alt=""/><br>
+Texcoco, Ciudad de México</p>
+								  </section>
+                                  <section>
+									<h2>Naturalistas Siglo XV<a href="Nezahualcoyotl.html"><br>
+									</a></h2>
+									<ul class="link-list">
+                                        <li><a href="Nezahualcoyotl.html"><br>
+                                        Acolmiztli Nezahualcóyotl</a></li>
+                                        <li><a href="Moctezuma.html">Moctezuma II, Xocoyotzin</a></li>
+                                        <li><a href="FBernardinoSahagun.html">Fray Bernardino de Sahagún</a><a href="#"></a> </li>
+                                        <li><br>
+                                          <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <a href="index.html">Línea de tiempo</a></li>
+                                    </ul>
+								  </section>
 							  </div>
 							</div>
 						</div>
