--- a/AlfonsoLHerrera.html
+++ b/AlfonsoLHerrera.html
@@ -76,8 +76,10 @@
                                             <p>En 1915 fue nombrado director del MNHN y como parte de su proyecto, creó la Dirección de Estudios Biológicos (DEB), y que posteriormente, se convirtió en el Instituto de Biología de la Universidad Nacional Autónoma de México.</p>
                                             <p>Uno de los logros de la DEB fue el establecimiento en 1922 del Jardín Botánico del Bosque de Chapultepec y un año después, la creación del Parque Zoológico de Chapultepec, que actualmente lleva su nombre.</p>
                                             <p>Sus trabajos fueron dados a conocer en publicaciones como <em>Nueva Farmacopea Mexicana</em>, <em>Memorias de la Sociedad Científica Antonio Alzate, Anales del Museo Nacional, La Naturaleza, Science</em>, entre muchas otras.</p>
-                                            <p><strong><em>Para saber más…<br>
-                                            </em></strong>Herrera  estableció la Plasmogenia como una ciencia experimental que buscaba simular las propiedades físicas y químicas de un supuesto &ldquo;protoplasma universal&rdquo; empleando diferentes compuestos orgánicos e inorgánicos, que permitieran explorar sobre los procesos de la evolución orgánica que dieron origen a la vida.<br>
+                                            <p class="bordered-feature-image"><strong><em>Para saber más…<br>
+                                            </em></strong><br>
+                                            Herrera  estableció la Plasmogenia como una ciencia experimental que buscaba simular las propiedades físicas y químicas de un supuesto &ldquo;protoplasma universal&rdquo; empleando diferentes compuestos orgánicos e inorgánicos, que permitieran explorar sobre los procesos de la evolución orgánica que dieron origen a la vida.<br>
+                                            <br>
                                             Para la publicación de los resultados de esta ciencia se crearon la &ldquo;Gaceta de Plasmogenia&rdquo; (en español) y el &ldquo;Bulletin du Laboratoire de Plasmogenie&rdquo; (en francés), publicaciones que desaparecieron en 1942. Actualmente, muchas de las ideas que sostuvieron la Plasmogenia ya no son vigentes, pero es de rescatar que Herrera fue de los primeros investigadores en adentrarse en este campo.</p>
 </section>
 
@@ -85,25 +87,8 @@
 								<div class="3u 12u(mobile)">
 
 									<!-- Right Sidebar -->
-										<section>
-											<header>
-												<h2>Naturalistas siglo XIX</h2>
-                                                <ul class="link-list">
-                                            <li><a href="AlfonsoHerrera.html">Alfonso Herrera Fernández</a></li>
-                                            <li><a href="AlfonsoLHerrera.html">Alfonso L. Herrera López</a></li>
-                                            <li><a href="AlfredoDuges.html">Alfredo Dugès</a></li>
-                                            <li><a href="candidoBolivar.html">Cándido Bolívar y Pieltain</a></li>
-                                            <li><a href="CarlosCHoffmann.html">Carlos Cristian Hoffmann</a></li>
-                                            <li><a href="CasianoConzatti.html">Casiano Conzatti</a></li>
-                                            <li> <a href="EitziMatuda.html">Eizi Matuda</a></li>
-                                            <li><a href="EnriqueRioja.html">Enrique Rioja Lo-Bianco</a></li>
-                                              </ul>
-											</header>
-                                            <p>&nbsp;</p>
-										</section>
-										
-                                        <section>
-											<header>
+									<section>
+										<header>
 												<h2>Aportación</h2>
 										  </header>
 											<p><img src="images/pagInternas/AHimg1.jpg" width="230" height="203" alt=""/><br>
@@ -111,6 +96,13 @@
 											<p><img src="images/pagInternas/AHimg2.jpg" width="230" height="255" alt=""/> <br>
 										    La Plasmogenia. Nueva Ciencia del origen de la vida (1932), por Alfonso L. Herrera. Figura 5. Partículas de percloruro de fierro y silicato de sodio al 10%. Germinaciones ascendentes.											</p>
                                   </section>
+                                  <section>
+										  <header>
+										    <ul class="link-list">
+										      <li><img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <a href="index.html">Curiosos y comprometidos</a>									      </li>
+										    </ul>
+										  </header>
+								  </section>
 							  </div>
 							</div>
 						</div>
@@ -120,7 +112,53 @@
 			<!-- Footer -->
 				<div id="footer-wrapper">
 					<footer id="footer" class="container">
-						
+						 <section>
+										<h2>Naturalistas del siglo XIX</h2>
+										<div>
+											<div class="row">
+												<div class="3u 12u(mobile)">
+													<ul class="link-list last-child">
+														<li><a href="AntonioCastillo.html">Antonio del Castillo</a></li>
+                                                        <li><a href="AlfredoDuges.html">Alfredo Dugès</a></li>
+                                                        <li><a href="EugenioDuges.html">Eugenio Dugés</a></li>
+                                                        <li><a href="AlfonsoHerrera.html">Alfonso Herrera Fernández</a></li>
+                                                        <li><a href="JoseMVelasco.html">José María Velasco</a></li>
+                                                        <li></li>
+													</ul>
+												</div>
+												<div class="3u 12u(mobile)">
+													<ul class="link-list last-child">
+														<li><a href="ManuelMVillada.html">Manuel María Villada</a></li>
+                                                        <li><a href="MarianoBarcena.html">Mariano Bárcena</a></li>
+                                                        <li><a href="CarlLumholtz.html">Carl Lumholtz</a></li>
+                                                        <li><a href="NicolasLeon.html">Nicolás León Calderón</a></li>
+                                                        <li><a href="MiguelAQuevedo.html">Miguel Ángel de Quevedo</a></li>
+                                                        <li></li>
+                                                     </ul>
+												</div>
+                                                 <div class="3u 12u(mobile)">
+													<ul class="link-list last-child">
+														<li><a href="CasianoConzatti.html">Casiano Conzatti</a></li>
+                                                        <li><a href="AlfonsoLHerrera.html">Alfonso L. Herrera López</a></li>
+                                                        <li><a href="AlfredoDuges.html">Alfredo Dugès</a></li>
+                                                        <li><a href="CarlosCHoffmann.html">Carlos Cristian Hoffmann</a></li>
+                                                        <li><a href="GeorgeBoole.html">George Boole Hinton</a></li>
+                                                        <li></li>
+                                                   </ul>
+                                                 </div>
+                                                 <div class="3u 12u(mobile)">
+													<ul class="link-list last-child">
+														<li><a href="IsaacOchoterena.html">Isaac Ochotorena Mendieta</a></li>
+                                                        <li><a href="MaximinoM.html">Maximino Martínez</a></li>
+                                                        <li><a href="EiziMatuda.html">Eizi Matuda</a></li>
+                                                        <li><a href="EnriqueRioja.html">Enrique Rioja Lo-Bianco</a></li>
+                                                        <li><a href="candidoBolivar.html">Cándido Bolívar y Pieltain</a></li>
+                                                        <li></li>
+													</ul>
+												</div>
+											</div>
+										</div>
+									</section> <br>
 								<!-- Links -->
 									<section>
 										<h2>Línea del tiempo</h2><br>
