--- a/BernardoVilla.html
+++ b/BernardoVilla.html
@@ -77,21 +77,7 @@
 								</div>
 								<div class="3u 12u(mobile)">
 
-									<!-- Right Sidebar -->
-										<section>
-											<header>
-												<h2>Naturalistas siglo XX</h2>
-                                                <ul class="link-list">
-                                            <li><a href="AlfredoBarrera.html">Alfredo Barrera Marín</a><a href="AlfonsoHerrera.html"></a></li>
-                                            <li><a href="AmeliaSamano.html">Amelia Sámano Bishop</a></li>
-                                            <li><a href="AnaHoffman.html">Ana Hoffmann Mendizábal</a></li>
-                                            <li><a href="BernardoVilla.html">Bernardo Villa Ramírez</a></li>
-                                            <li><a href="EfrainHdezX.html">Efraim Hernández Xolocotzi</a></li>
-                                            <li><a href="EnriqueBeltran.html">Enrique Beltrán Castillo</a></li>
-                                              </ul>
-											</header>
-										</section>
-										
+									<!-- Right Sidebar -->										
                                         <section>
 											<header>
 												<h2>Aportación</h2>
@@ -101,6 +87,21 @@
 											  <br>
 									      Los murciélagos de México, 1966.</p>
                                   </section>
+                                  <section>
+											<header>
+												<h2>Naturalistas siglo XX</h2>
+                                                <ul class="link-list">
+                                            <li><a href="AlfredoBarrera.html">Alfredo Barrera Marín</a><a href="AlfonsoHerrera.html"></a></li>
+                                            <li><a href="AmeliaSamano.html">Amelia Sámano Bishop</a></li>
+                                            <li><a href="AnaHoffman.html">Ana Hoffmann Mendizábal</a></li>
+                                            <li><a href="BernardoVilla.html">Bernardo Villa Ramírez</a></li>
+                                            <li><a href="EfrainHdezX.html">Efraim Hernández Xolocotzi</a></li>
+                                            <li><a href="EnriqueBeltran.html">Enrique Beltrán Castillo</a></li>
+                                            <li><img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <a href="index.html">Línea de tiempo</a></li>
+                                              </ul>
+											</header>
+										</section>
+
 							  </div>
 							</div>
 						</div>
