--- a/FBernardinoSahagun.html
+++ b/FBernardinoSahagun.html
@@ -84,16 +84,6 @@
 
 									<!-- Right Sidebar -->
 										<section>
-											<header>
-												<h2>Naturalistas Siglo XV</h2>
-											</header>
-                                            <ul class="link-list">
-                                            <li><a href="#">Fray Bernardino de Sahagún</a></li>
-                                            <li><br>
-                                          <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <a href="index.html">Línea de tiempo</a></li>
-                                          </ul>  
-										</section>
-								  <section>
 									<header>
 												<h2>Aportación</h2>
 								    </header>
@@ -103,6 +93,18 @@
 								      Historia general de las cosas de Nueva España por el fray Bernardino de Sahagún: el Códice Florentino. <a href="https://www.wdl.org/es/item/10622/view/1/1/" target="_blank">Libro XI: de las cosas naturales </a></p>
 									  <p>&nbsp;</p>
 								  </section>
+                                        <section>
+											<header>
+												<h2>Naturalistas Siglo XV</h2>
+											</header>
+                                            <ul class="link-list">
+                                              <li><a href="Nezahualcoyotl.html">Acolmiztli Nezahualcóyotl</a></li>
+                                              <li><a href="Moctezuma.html">Moctezuma II, Xocoyotzin</a></li>
+                                              <li><a href="FBernardinoSahagun.html">Fray Bernardino de Sahagún</a></li>
+                                              <li>
+                                                <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <a href="index.html">Línea de tiempo</a></li>
+                                          </ul>  
+										</section>
 							  </div>
 							</div>
 						</div>
