--- a/Moctezuma.html
+++ b/Moctezuma.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Moctezuma</title>
+		<title>Moctezuma II, Xocoyotzin</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -85,17 +85,6 @@
 								<div class="3u 12u(mobile)">
 
 									<!-- Right Sidebar -->
-										<section>
-									<h2>Naturalistas Siglo XV<a href="Nezahualcoyotl.html"><br>
-									</a></h2>
-									<ul class="link-list">
-                                        <li><a href="Nezahualcoyotl.html"><br>
-                                        Acolmiztli Nezahualcóyotl</a></li>
-                                        <li><a href="Moctezuma.html">Moctezuma II, Xocoyotzin</a> </li>
-                                        <li><br>
-                                          <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <a href="index.html">Línea de tiempo</a></li>
-                                    </ul>
-								  </section>
                                   <section>
 											<header>
 												<h2>Aportación</h2>
@@ -109,6 +98,18 @@
 										  </header>
 											<p><img src="images/pagInternas/Moctimg2.jpg" width="230" height="226" alt=""/><br>
 Moctezuma visita en Chapultepec los retratos de los antecesores (1895). Daniel del Valle.</p>
+								  </section>
+                                  <section>
+									<h2>Naturalistas Siglo XV<a href="Nezahualcoyotl.html"><br>
+									</a></h2>
+									<ul class="link-list">
+                                        <li><a href="Nezahualcoyotl.html"><br>
+                                        Acolmiztli Nezahualcóyotl</a></li>
+                                        <li><a href="Moctezuma.html">Moctezuma II, Xocoyotzin</a> </li>
+                                        <li><a href="FBernardinoSahagun.html">Fray Bernardino de Sahagún</a></li>
+                                        <li><br>
+                                          <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/> <img src="assets/css/images/bg02.jpg" width="5" height="5" alt=""/>  <a href="index.html">Línea de tiempo</a></li>
+                                    </ul>
 								  </section>
 							  </div>
 							</div>
