Cambios en las biografias de cgalindo

--- a/Gakil.html
+++ b/Gakil.html
@@ -84,7 +84,9 @@
 												<h3><!-- InstanceBeginEditable name="Periodo_vida" -->5000 BCE - 4970 BCE<!-- InstanceEndEditable --></h3>
 											</header>
 											<!-- InstanceBeginEditable name="Biografía" -->
-											<p>&nbsp;</p>
+											<p>Me llamo Gakil. Mi nombre significa garambullo, una de mis frutas preferidas. El nombre me lo dio el guama, nuestro chamán, un hombre viejo y muy sabio. Pertenezco a un grupo que vivió en lo que ahora se conoce como península de Baja California. A nuestra lengua se le ha dado el nombre de laymón o cohimí laymón.  Crecí en las en las montañas cerca de las cuevas en donde pintábamos. Desde ahí veíamos el mar de los dos lados de la península. </p>
+											<p>Nuestra gran familia se integraba por hermanos, tíos, primos, sobrinos. En total éramos como como 50 en la familia. Los hombres aprendíamos a cazar desde pequeños, mientras que las mujeres se dedicaban a recolectar plantas comestibles. Nos encantaban las pitahayas dulces y agrías, las tunas y por supuesto los garambullos.  En las montañas había mucho taye o borrego cimarrón y en las partes bajas cazabamos al ammo-gokio o berrendo. </p>
+											<p>A finales del verano y principios del otoño nos reuníamos a celebrar y a pintar las cuevas de la Sierra. Ahí plasmamos a muchos de los animales con los que convivimos como el cóndor, el venado bura, el borrego cimarrón y el berrendo. También pintamos a las ballenas que veíamos y admirábamos en nuestros recorridos cerca del mar. </p>
 											<!-- InstanceEndEditable --></section>
 
 								</div>
