--- a/TIMELINE3/embed/index.html
+++ b/TIMELINE3/embed/index.html
@@ -26,12 +26,16 @@ html, body {
 <!-- HTML5 shim, for IE6-8 support of HTML elements--><!--[if lt IE 9]>
 <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
-</html>
 <body>
   <!-- BEGIN Timeline Embed -->
   <div id="timeline-embed"></div>
   <!-- Override -->
   <script type="text/javascript">
+    var lang = window.location.href.match(/&lang=([a-zA-Z]*)&?/);
+
+    if (lang) {
+      document.getElementsByTagName('html')[0].setAttribute('lang', lang[1]);
+    }
     var trim_point = window.location.href.indexOf('embed/index.html');
     if (trim_point > 0) {
       var embed_path = window.location.href.substring(0,trim_point); // supports https access via https://s3.amazonaws.com/cdn.knightlab.com/libs/timeline/latest/embed/index.html
